# advent

./: .travis.yml  advent.cabal  stack.yaml
src/Advent/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day17.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day8.hs  Day9.hs
test/: test.hs
