name:                advent
version:             0.1.0.0
synopsis:            Solutions to the "Advent of Code" challenges
description:         Solutions to the "Advent of Code" challenges
homepage:            http://github.com/micxjo/advent
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2015 Micxjo Funkcio
category:            Code Competitions
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Advent.Day1, Advent.Day2, Advent.Day3, Advent.Day4,
                       Advent.Day5, Advent.Day8, Advent.Day9, Advent.Day10,
                       Advent.Day11, Advent.Day12
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
  build-depends:       aeson
                     , attoparsec
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptohash
                     , hex
                     , multimap
                     , text
                     , text-icu
                     , text-regex-replace
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , advent
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/advent
